@@ -101,7 +101,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
 
     /**
      * Default lookup select list max size.
-     * @see TableInfo#getSelectList(String, List, Integer)
+     * @see TableInfo#getSelectList(String, List, Integer, String)
      */
     private static final int MAX_SELECT_LIST = 10_000;
 
@@ -148,11 +148,13 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
 
     private DetailsURL _detailsURL;
     protected AuditBehaviorType _auditBehaviorType = AuditBehaviorType.NONE;
+    protected AuditBehaviorType _xmlAuditBehaviorType = null;
     private FieldKey _auditRowPk;
 
     private final Map<String, CounterDefinition> _counterDefinitionMap = new CaseInsensitiveHashMap<>();    // Really only 1 for now, but could be more in future
 
     @NotNull
+    @Override
     public List<ColumnInfo> getPkColumns()
     {
         List<ColumnInfo> ret = new ArrayList<>();
@@ -253,16 +255,19 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return false;
     }
 
+    @Override
     public DbSchema getSchema()
     {
         return _schema;
     }
 
+    @Override
     public SqlDialect getSqlDialect()
     {
         return getSchema().getSqlDialect();
     }
 
+    @Override
     public List<String> getPkColumnNames()
     {
         List<String> ret = new ArrayList<>();
@@ -273,11 +278,13 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return Collections.unmodifiableList(ret);
     }
 
+    @Override
     public ColumnInfo getVersionColumn()
     {
         return null;
     }
 
+    @Override
     public String getVersionColumnName()
     {
         return null;
@@ -290,6 +297,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
     }
 
     @NotNull
+    @Override
     public SQLFragment getFromSQL(String alias)
     {
         if (null != getSelectName())
@@ -308,22 +316,28 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
     abstract protected SQLFragment getFromSQL();
 
     @Override
-    public @NotNull NamedObjectList getSelectList(String columnName, List<FilterType> filters, Integer maxRows)
+    public @NotNull NamedObjectList getSelectList(@Nullable String columnName, List<FilterType> filters, Integer maxRows, @Nullable String titleColumn)
     {
+        ColumnInfo titleColumnInfo = null;
+        if (titleColumn != null)
+        {
+            titleColumnInfo = getColumn(titleColumn);
+        }
+
         if (columnName == null)
         {
             List<ColumnInfo> pkColumns = getPkColumns();
             if (pkColumns.size() != 1)
                 return new NamedObjectList();
             else
-                return getSelectList(pkColumns.get(0), Collections.emptyList(), maxRows);
+                return getSelectList(pkColumns.get(0), Collections.emptyList(), maxRows, titleColumnInfo);
         }
 
         ColumnInfo column = getColumn(columnName);
-        return getSelectList(column, filters, maxRows);
+        return getSelectList(column, filters, maxRows, titleColumnInfo);
     }
 
-    private @NotNull NamedObjectList getSelectList(ColumnInfo firstColumn, List<FilterType> filters, Integer maxRows)
+    private @NotNull NamedObjectList getSelectList(ColumnInfo firstColumn, List<FilterType> filters, Integer maxRows, ColumnInfo titleColumnInfo)
     {
         final NamedObjectList ret = new NamedObjectList();
         if (firstColumn == null)
@@ -334,7 +348,12 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
 
         List<ColumnInfo> cols;
         final int titleIndex;
-        if (firstColumn == titleColumn)
+        if (titleColumnInfo != null && !(firstColumn.equals(titleColumnInfo)))
+        {
+            cols = Arrays.asList(firstColumn, titleColumnInfo);
+            titleIndex = 2;
+        }
+        else if (firstColumn == titleColumn)
         {
             cols = Arrays.asList(firstColumn);
             titleIndex = 1;
@@ -385,6 +404,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return ret;
     }
 
+    @Override
     public List<ColumnInfo> getUserEditableColumns()
     {
         List<ColumnInfo> ret = new ArrayList<>();
@@ -398,12 +418,14 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return Collections.unmodifiableList(ret);
     }
 
+    @Override
     public List<ColumnInfo> getColumns(String colNames)
     {
         String[] colNameArray = colNames.split(",");
         return getColumns(colNameArray);
     }
 
+    @Override
     public List<ColumnInfo> getColumns(String... colNameArray)
     {
         List<ColumnInfo> ret = new ArrayList<>(colNameArray.length);
@@ -481,6 +503,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return ret;
     }
 
+    @Override
     public ColumnInfo getColumn(@NotNull String name)
     {
         return getColumn(name, true);
@@ -488,7 +511,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
 
     /** @return null or BaseColumnInfo, will throw if column exists and is locked */
     @Nullable
-    public BaseColumnInfo getMutableColumn(@NotNull String colName)
+    public MutableColumnInfo getMutableColumn(@NotNull String colName)
     {
         return getMutableColumn(colName, true);
     }
@@ -499,15 +522,15 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
      *                        perform in resolveColumn() for backwards compatibility
      */
     @Nullable
-    public BaseColumnInfo getMutableColumn(@NotNull String colName, boolean resolveIfNeeded)
+    public MutableColumnInfo getMutableColumn(@NotNull String colName, boolean resolveIfNeeded)
     {
         checkLocked();
         ColumnInfo col = getColumn(colName, resolveIfNeeded);
         if (null == col)
             return null;
         // all columns extend BaseColumnInfo for now
-        ((BaseColumnInfo)col).checkLocked();
-        return (BaseColumnInfo) col;
+        ColumnInfo.checkIsMutable(col);
+        return (MutableColumnInfo) col;
     }
 
     @Override
@@ -518,16 +541,17 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return getColumn(name.getName());
     }
 
-    /* returns null or BaseColumnInfo, will throw if column exists and is locked */
-    public BaseColumnInfo getMutableColumn(@NotNull FieldKey name)
+    /* returns null or MutableColumnInfo, will throw if column exists and is locked */
+    @Nullable
+    public MutableColumnInfo getMutableColumn(@NotNull FieldKey name)
     {
         checkLocked();
         ColumnInfo col = getColumn(name);
         if (null == col)
             return null;
         // all columns extend BaseColumnInfo for now
-        ((BaseColumnInfo)col).checkLocked();
-        return (BaseColumnInfo) col;
+        ColumnInfo.checkIsMutable(col);
+        return (MutableColumnInfo) col;
     }
 
 
@@ -550,9 +574,10 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
     }
 
     @NotNull
+    @Override
     public List<ColumnInfo> getColumns()
     {
-        return Collections.unmodifiableList(new ArrayList<>(_columnMap.values()));
+        return List.copyOf(_columnMap.values());
     }
 
     @NotNull
@@ -560,33 +585,37 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
     {
         checkLocked();
         return _columnMap.values().stream()
-                .map(c -> (BaseColumnInfo)c)
-                .peek(BaseColumnInfo::checkLocked)
-                .collect(Collectors.toList());
+            .map(c -> (BaseColumnInfo)c)
+            .peek(BaseColumnInfo::checkLocked)
+            .collect(Collectors.toList());
     }
 
-
+    @Override
     public Set<String> getColumnNameSet()
     {
         // Make the set case-insensitive
         return Collections.unmodifiableSet(new CaseInsensitiveTreeSet(_columnMap.keySet()));
     }
 
+    @Override
     public String getName()
     {
         return _name;
     }
 
+    @Override
     public String getTitle()
     {
         return _title == null ? _name : _title;
     }
 
+    @Override
     public String getTitleField()
     {
         return _title;
     }
 
+    @Override
     public String getDescription()
     {
         return _description;
@@ -606,7 +635,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return _columnMap.remove(column.getName()) != null;
     }
 
-    public BaseColumnInfo addColumn(BaseColumnInfo column)
+    public MutableColumnInfo addColumn(MutableColumnInfo column)
     {
         checkLocked();
         // Not true if this is a VirtualTableInfo
@@ -621,7 +650,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _columnMap.put(column.getName(), column);
         // Clear the cached resolved columns so we regenerate it if the shape of the table changes
         _resolvedColumns.clear();
-        assert column.lockName();
+        assert !(column instanceof BaseColumnInfo) || ((BaseColumnInfo)column).lockName();
         return column;
     }
 
@@ -673,6 +702,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _methodMap.put(name, method);
     }
 
+    @Override
     public MethodInfo getMethod(String name)
     {
         if (_methodMap == null)
@@ -692,6 +722,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _title = title;
     }
 
+    @Override
     public ActionURL getGridURL(Container container)
     {
         if (_gridURL == LINK_DISABLER)
@@ -705,6 +736,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return null;
     }
 
+    @Override
     public ActionURL getInsertURL(Container container)
     {
         if (_insertURL == LINK_DISABLER)
@@ -732,6 +764,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return null;
     }
 
+    @Override
     public ActionURL getDeleteURL(Container container)
     {
         if (_deleteURL == LINK_DISABLER)
@@ -745,6 +778,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return null;
     }
 
+    @Override
     public StringExpression getUpdateURL(@Nullable Set<FieldKey> columns, Container container)
     {
         if (_updateURL == LINK_DISABLER)
@@ -772,6 +806,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return null;
     }
 
+    @Override
     public StringExpression getDetailsURL(@Nullable Set<FieldKey> columns, Container container)
     {
         if (_detailsURL == AbstractTableInfo.LINK_DISABLER)
@@ -799,6 +834,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return null;
     }
 
+    @Override
     public boolean hasPermission(@NotNull UserPrincipal user, @NotNull Class<? extends Permission> perm)
     {
         SecurityLogger.log("AbstractTableInfo.hasPermission " + getName(), user, null, false);
@@ -846,6 +882,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _updateURL = updateURL;
     }
 
+    @Override
     public ButtonBarConfig getButtonBarConfig()
     {
         return _buttonBarConfig;
@@ -857,6 +894,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _buttonBarConfig = buttonBarConfig;
     }
 
+    @Override
     public AggregateRowConfig getAggregateRowConfig()
     {
         return _aggregateRowConfig;
@@ -868,6 +906,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _aggregateRowConfig = config;
     }
 
+    @Override
     public void setDefaultVisibleColumns(@Nullable Iterable<FieldKey> list)
     {
         checkLocked();
@@ -875,6 +914,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
     }
 
     /** @return unmodifiable list of the columns that should be shown by default for this table */
+    @Override
     public List<FieldKey> getDefaultVisibleColumns()
     {
         if (_defaultVisibleColumns instanceof List)
@@ -910,10 +950,10 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return Collections.unmodifiableMap(ret);
     }
 
-    public boolean safeAddColumn(BaseColumnInfo column)
+    public boolean safeAddColumn(MutableColumnInfo column)
     {
         checkLocked();
-        if (getColumn(column.getName()) != null)
+        if (getColumn(column.getName(), false) != null)
             return false;
         addColumn(column);
         return true;
@@ -1177,7 +1217,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
                         {
                             try
                             {
-                                initColumnFromXml(schema, column, xmlColumn, errors);
+                                initColumnFromXml(schema, (BaseColumnInfo)column, xmlColumn, errors);
                             }
                             catch (IllegalArgumentException e)
                             {
@@ -1367,6 +1407,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
      * Returns true by default. Override if your derived class is not accessible through Query
      * @return Whether this table is public (i.e., accessible via Query)
      */
+    @Override
     public boolean isPublic()
     {
         //by default, all subclasses are public (i.e., accessible through Query)
@@ -1374,12 +1415,14 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return getPublicName() != null && getPublicSchemaName() != null;
     }
 
+    @Override
     public String getPublicName()
     {
         return getName();
     }
 
     /** @return a SchemaKey encoded name for this schema. */
+    @Override
     public String getPublicSchemaName()
     {
         // Prefer the UserSchema's name.  Assume the DbSchema name doesn't need encoding
@@ -1387,22 +1430,26 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return schema != null ? schema.getSchemaName() : getSchema().getName();
     }
 
+    @Override
     public boolean needsContainerClauseAdded()
     {
         return true;
     }
 
     @Nullable
+    @Override
     public ContainerFilter getContainerFilter()
     {
         return null;
     }
 
+    @Override
     public boolean isMetadataOverrideable()
     {
         return true;
     }
 
+    @Override
     public void overlayMetadata(String tableName, UserSchema schema, Collection<QueryException> errors)
     {
         checkLocked();
@@ -1413,6 +1460,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         }
     }
 
+    @Override
     public void overlayMetadata(Collection<TableType> metadata, UserSchema schema, Collection<QueryException> errors)
     {
         checkLocked();
@@ -1436,6 +1484,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return null;
     }
 
+    @Override
     public ColumnInfo getLookupColumn(ColumnInfo parent, String name)
     {
         ForeignKey fk = parent.getFk();
@@ -1444,18 +1493,21 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return fk.createLookupColumn(parent, name);
     }
 
+    @Override
     public int getCacheSize()
     {
         return _cacheSize;
     }
 
     @Nullable
+    @Override
     public Domain getDomain()
     {
         return null;
     }
 
     @Nullable
+    @Override
     public DomainKind getDomainKind()
     {
         Domain domain = getDomain();
@@ -1465,6 +1517,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
     }
 
     @Nullable
+    @Override
     public QueryUpdateService getUpdateService()
     {
         // UNDONE: consider allowing all query tables to be updated via update service
@@ -1497,6 +1550,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
      * @return FieldKey of the Container column.
      */
     @Nullable
+    @Override
     public FieldKey getContainerFieldKey()
     {
         ColumnInfo col = getColumn("container");
@@ -1517,11 +1571,13 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _triggerFactories.put(factory.getClass(), factory);
     }
 
+    @Override
     public boolean hasTriggers(Container c)
     {
         return !getTriggers(c).isEmpty();
     }
 
+    @Override
     public boolean canStreamTriggers(Container c)
     {
         for (Trigger script : getTriggers(c))
@@ -1641,7 +1697,8 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _locked = b;
         // set columns in the column list as locked, lookup columns created later are not locked
         for (ColumnInfo c : getColumns())
-            ((BaseColumnInfo)c).setLocked(b);
+            if (c instanceof MutableColumnInfo)
+                ((MutableColumnInfo)c).setLocked(b);
     }
 
     @Override
@@ -1661,12 +1718,19 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
     {
         checkLocked();
         _auditBehaviorType = type;
+        _xmlAuditBehaviorType = type;
     }
 
     @Override
     public AuditBehaviorType getAuditBehavior()
     {
         return _auditBehaviorType;
+    }
+
+    @Override
+    public AuditBehaviorType getXmlAuditBehaviorType()
+    {
+        return _xmlAuditBehaviorType;
     }
 
     @Override
