@@ -28,14 +28,13 @@ import org.labkey.api.data.dialect.SqlDialect;
 import org.labkey.api.settings.AppProps;
 import org.labkey.api.util.Pair;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.nio.charset.StandardCharsets;
 
+import static org.apache.commons.lang3.StringUtils.equalsIgnoreCase;
 import static org.apache.commons.lang3.StringUtils.repeat;
 
 /**
@@ -51,7 +50,7 @@ public class Lsid
     private final String objectId;
     private final String version;
     private final boolean valid;
-    private final int hashCode;
+    private int hashCode;
 
 
     /**
@@ -66,7 +65,6 @@ public class Lsid
         this.objectId = StringUtils.defaultString(b.getObjectId(),"");
         this.version = b.getVersion();
         this.valid = b.valid;
-        this.hashCode = this.toString().hashCode();
     }
 
 
@@ -86,7 +84,6 @@ public class Lsid
         this.objectId = StringUtils.defaultString(b.getObjectId(),"");
         this.version = b.getVersion();
         this.valid = true;
-        this.hashCode = this.toString().hashCode();
     }
 
     /**
@@ -106,7 +103,6 @@ public class Lsid
         this.objectId = StringUtils.defaultString(b.getObjectId(),"");
         this.version = b.getVersion();
         this.valid = true;
-        this.hashCode = this.toString().hashCode();
     }
 
 
@@ -118,11 +114,27 @@ public class Lsid
         this.objectId = StringUtils.defaultString(objectId,"");
         this.version = version;
         this.valid = valid;
-        this.hashCode = this.toString().hashCode();
     }
 
-    // Keep in sync with getSqlExpressionToExtractObjectId() (below)
-    private static final Pattern LSID_REGEX = Pattern.compile("(?i)^urn:lsid:([^:]+):([^:]+):([^:]+)(?::(.*))?");
+    /* Keep in sync with getSqlExpressionToExtractObjectId() (below)
+     * We spend a lot of time parsing lsid, so avoid pattern match
+     *
+     * To spend less time parsing, maybe cached parsed Lsid in ExpObjectImpl? (not that straightforward)
+     */
+
+    @Nullable
+    private static String[] parseLsid(String s)
+    {
+        String[] parts = StringUtils.split(s,':');
+        if (parts.length < 5 || parts.length > 6)
+            return null;
+        if (!equalsIgnoreCase("urn",parts[0]))
+            return null;
+        if (!equalsIgnoreCase("lsid",parts[1]))
+            return null;
+        return new String[] {parts[2], parts[3], parts[4], parts.length < 6 ? null : parts[5]};
+    }
+
 
     // Keep in sync with LSID_REGEX (above)
     public static Pair<String, String> getSqlExpressionToExtractObjectId(String lsidExpression, SqlDialect dialect)
@@ -215,6 +227,9 @@ public class Lsid
 
     public int hashCode()
     {
+        // this.toString() is expensive, don't use unless someone asks
+        if (0 == hashCode)
+            hashCode = toString().hashCode();
         return hashCode;
     }
 
@@ -255,16 +270,9 @@ public class Lsid
      */
     public static String encodePart(String original)
     {
-        try
-        {
-            String result = URLEncoder.encode(original, "UTF-8");
-            result = result.replace(":", "%3A");
-            return result;
-        }
-        catch (UnsupportedEncodingException e)
-        {
-            throw new IllegalArgumentException("UTF-8 encoding not supported on this machine", e);
-        }
+        String result = URLEncoder.encode(original, StandardCharsets.UTF_8);
+        result = result.replace(":", "%3A");
+        return result;
     }
 
     /**
@@ -277,19 +285,12 @@ public class Lsid
             return null;
         }
 
-        try
-        {
-            return URLDecoder.decode(original, "UTF-8");
-        }
-        catch (UnsupportedEncodingException e)
-        {
-            throw new IllegalArgumentException("UTF-8 encoding not supported on this machine", e);
-        }
+        return URLDecoder.decode(original, StandardCharsets.UTF_8);
     }
 
     public static boolean isLsid(String lsid)
     {
-        return LSID_REGEX.matcher(lsid).matches();
+        return null != parseLsid(lsid);
     }
 
     public static String canonical(String lsid)
@@ -333,6 +334,11 @@ public class Lsid
         return uri;
     }
 
+    public LsidBuilder edit()
+    {
+        return new LsidBuilder(this);
+    }
+
 
     public static class LsidBuilder implements Builder
     {
@@ -353,16 +359,16 @@ public class Lsid
         public LsidBuilder(String lsid)
         {
             src = lsid;
-            Matcher m = LSID_REGEX.matcher(lsid);
-            if (!m.matches())
+            String[] parts = parseLsid(lsid);
+            if (null == parts)
             {
                 valid = false;
                 return;
             }
-            authority = decodePart(m.group(1).toLowerCase());
-            namespace = decodePart(m.group(2));
-            objectId = decodePart(m.group(3));
-            version = decodePart(m.group(4));
+            authority = decodePart(parts[0]).toLowerCase();
+            namespace = decodePart(parts[1]);
+            objectId = decodePart(parts[2]);
+            version = decodePart(parts[3]);
             valid = true;
             resetPrefix();
         }
@@ -701,7 +707,7 @@ public class Lsid
             assertEquals(b.toString(), lsid3.toString());
             Lsid lsid4 = b.setObjectId("OBJ").build();
 
-            Lsid.LsidBuilder t = new Lsid.LsidBuilder(lsid1);
+            Lsid.LsidBuilder t = lsid1.edit();
             assertEquals(lsid1,t.build());
             assertEquals(lsid1.toString(),t.toString());
             t.setVersion("3");
