@@ -26,6 +26,8 @@ import org.labkey.api.assay.AssayRunType;
 import org.labkey.api.assay.AssayService;
 import org.labkey.api.assay.AssayUrls;
 import org.labkey.api.assay.TsvDataHandler;
+import org.labkey.api.assay.plate.PlateMetadataDataHandler;
+import org.labkey.api.assay.plate.AssayPlateMetadataService;
 import org.labkey.api.assay.plate.PlateService;
 import org.labkey.api.data.Container;
 import org.labkey.api.data.ContainerManager;
@@ -53,7 +55,10 @@ import org.labkey.api.view.ActionURL;
 import org.labkey.api.view.NavTree;
 import org.labkey.api.view.WebPartFactory;
 import org.labkey.assay.pipeline.AssayImportRunTask;
+import org.labkey.assay.plate.AssayPlateDataDomainKind;
 import org.labkey.assay.plate.PlateManager;
+import org.labkey.assay.plate.AssayPlateMetadataServiceImpl;
+import org.labkey.assay.plate.TsvPlateTypeHandler;
 import org.labkey.assay.plate.query.PlateSchema;
 import org.labkey.assay.query.AssayDbSchema;
 import org.labkey.assay.query.AssaySchemaImpl;
@@ -85,9 +90,9 @@ public class AssayModule extends SpringModule
     }
 
     @Override
-    public double getVersion()
+    public Double getSchemaVersion()
     {
-        return 19.22;
+        return 20.003;
     }
 
     @Override
@@ -120,13 +125,16 @@ public class AssayModule extends SpringModule
         addController("plate", PlateController.class);
         DefaultSchema.registerProvider(PlateSchema.SCHEMA_NAME, new PlateSchema.Provider(this));
         DefaultSchema.registerProvider(AssaySchemaImpl.NAME, new AssaySchemaImpl.Provider(this));
-        FolderTypeManager.get().registerFolderType(this, new AssayFolderType(this));
 
         PropertyService.get().registerDomainKind(new PlateBasedAssaySampleSetDomainKind());
 
         // Register early so file-based assays are available to Java code at upgrade time
         ExperimentService.get().registerExperimentDataHandler(new TsvDataHandler());
         ExperimentService.get().registerExperimentDataHandler(new FileBasedModuleDataHandler());
+        ExperimentService.get().registerExperimentDataHandler(new PlateMetadataDataHandler());
+        AssayPlateMetadataService.registerService(PlateMetadataDataHandler.DATA_TYPE, new AssayPlateMetadataServiceImpl());
+        PropertyService.get().registerDomainKind(new AssayPlateDataDomainKind());
+        PlateService.get().registerPlateTypeHandler(new TsvPlateTypeHandler());
 
         PropertyService.get().registerDomainKind(new DefaultAssayDomainKind());
         PropertyService.get().registerDomainKind(new AssayBatchDomainKind());
@@ -139,6 +147,8 @@ public class AssayModule extends SpringModule
     @Override
     protected void startupAfterSpringConfig(ModuleContext moduleContext)
     {
+        FolderTypeManager.get().registerFolderType(this, new AssayFolderType(this));
+
         PipelineJobService.get().registerTaskFactoryFactory(AssayImportRunTaskType.type, new AssayImportRunTask.FactoryFactory());
         AssayService.get().registerAssayProvider(new TsvAssayProvider());
         ExperimentService.get().registerExperimentRunTypeSource(container -> {
@@ -240,17 +250,19 @@ public class AssayModule extends SpringModule
     @Override
     public @NotNull Set<Class> getIntegrationTests()
     {
-        return Collections.singleton(ModuleAssayCache.TestCase.class);
+        return Set.of(
+            ModuleAssayCache.TestCase.class
+        );
     }
 
     @Override
     public @NotNull Set<Class> getUnitTests()
     {
-        Set<Class> set = new HashSet<>();
-        set.add(TsvAssayProvider.TestCase.class);
-        set.add(AssaySchemaImpl.TestCase.class);
-        set.add(AssayProviderSchema.TestCase.class);
-
-        return set;
+        return Set.of(
+            TsvAssayProvider.TestCase.class,
+            AssaySchemaImpl.TestCase.class,
+            AssayProviderSchema.TestCase.class,
+            PlateManager.TestCase.class
+        );
     }
 }
