@@ -70,6 +70,7 @@ import org.labkey.pipeline.api.PipelineStatusFileImpl;
 import org.labkey.pipeline.api.PipelineStatusManager;
 import org.labkey.pipeline.api.ScriptTaskFactory;
 import org.labkey.pipeline.api.properties.ApplicationPropertiesSiteSettings;
+import org.labkey.pipeline.cluster.ClusterStartup;
 import org.labkey.pipeline.importer.FolderImportProvider;
 import org.labkey.pipeline.mule.EPipelineContextListener;
 import org.labkey.pipeline.mule.EPipelineQueueImpl;
@@ -83,11 +84,9 @@ import org.labkey.pipeline.xml.ScriptTaskType;
 
 import java.beans.PropertyChangeEvent;
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 /**
@@ -103,9 +102,9 @@ public class PipelineModule extends SpringModule implements ContainerManager.Con
     }
 
     @Override
-    public double getVersion()
+    public Double getSchemaVersion()
     {
-        return 19.20;
+        return 20.000;
     }
 
     @Override
@@ -143,7 +142,7 @@ public class PipelineModule extends SpringModule implements ContainerManager.Con
     @NotNull
     protected Collection<WebPartFactory> createWebPartFactories()
     {
-        return new ArrayList<>(Arrays.asList(
+        return Arrays.asList(
             new BaseWebPartFactory(PipelineWebPart.getPartName())
             {
                 @Override
@@ -162,8 +161,7 @@ public class PipelineModule extends SpringModule implements ContainerManager.Con
                     return new ProtocolManagementWebPart(portalCtx);
                 }
             }
-
-        ));
+        );
     }
 
     @Override
@@ -267,26 +265,27 @@ public class PipelineModule extends SpringModule implements ContainerManager.Con
     @NotNull
     public Set<Class> getIntegrationTests()
     {
-        return new HashSet<>(Arrays.asList(
-            PipelineQueueImpl.TestCase.class,
+        return Set.of(
             PipelineController.TestCase.class,
             PipelineJobServiceImpl.IntegrationTestCase.class,
+            PipelineQueueImpl.TestCase.class,
             PipelineServiceImpl.TestCase.class,
-            StatusController.TestCase.class
-        ));
+            StatusController.TestCase.class,
+            ClusterStartup.TestCase.class
+        );
     }
 
     @Override
     @NotNull
     public Set<Class> getUnitTests()
     {
-        return new HashSet<>(Arrays.asList(
+        return Set.of(
+            CommandTaskImpl.TestCase.class,
             PathMapperImpl.TestCase.class,
             PipelineCommandTestCase.class,
-            PipelineJobServiceImpl.TestCase.class,
-            CommandTaskImpl.TestCase.class,
-            PipelineJobMarshaller.TestCase.class
-        ));
+            PipelineJobMarshaller.TestCase.class,
+            PipelineJobServiceImpl.TestCase.class
+        );
     }
 
     @Override
