@@ -25,10 +25,7 @@ import org.labkey.api.attachments.AttachmentService;
 import org.labkey.api.data.Container;
 import org.labkey.api.data.ContainerManager;
 import org.labkey.api.data.SqlExecutor;
-import org.labkey.api.markdown.MarkdownService;
 import org.labkey.api.module.CodeOnlyModule;
-import org.labkey.api.module.FolderType;
-import org.labkey.api.module.FolderTypeManager;
 import org.labkey.api.module.ModuleContext;
 import org.labkey.api.module.ModuleLoader;
 import org.labkey.api.search.SearchService;
@@ -38,18 +35,14 @@ import org.labkey.api.util.PageFlowUtil;
 import org.labkey.api.view.HttpView;
 import org.labkey.api.view.Portal;
 import org.labkey.api.view.WebPartFactory;
-import org.labkey.api.webdav.WebdavService;
 import org.labkey.api.wiki.WikiRendererType;
 import org.labkey.api.wiki.WikiService;
 import org.labkey.wiki.export.WikiImporterFactory;
 import org.labkey.wiki.export.WikiWriterFactory;
-import org.labkey.wiki.model.CollaborationFolderType;
 import org.labkey.wiki.model.Wiki;
 import org.labkey.wiki.model.WikiType;
 import org.labkey.wiki.model.WikiVersion;
 import org.labkey.wiki.query.WikiSchema;
-import org.labkey.wiki.renderer.MarkdownServiceImpl;
-import org.labkey.wiki.renderer.RadeoxRenderer;
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -59,15 +52,14 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.Map;
 import java.util.Set;
 
 /**
+ * Provides a simple wiki with multiple rendering engine options.
  * User: migra
  * Date: Jul 18, 2005
- * Time: 3:07:21 PM
  */
 public class WikiModule extends CodeOnlyModule implements SearchService.DocumentProvider
 {
@@ -107,8 +99,7 @@ public class WikiModule extends CodeOnlyModule implements SearchService.Document
     public void doStartup(ModuleContext moduleContext)
     {
         ContainerManager.addContainerListener(new WikiContainerListener());
-        FolderTypeManager.get().registerFolderType(this, new CollaborationFolderType());
-        WebdavService.get().addProvider(new WikiWebdavProvider());
+//        WebdavService.get().addProvider(new WikiWebdavProvider());
 
         // Ideally, this would be in afterUpdate(), but announcements runs the wiki sql scripts and is dependent on
         // wiki module, so no dice.
@@ -127,17 +118,9 @@ public class WikiModule extends CodeOnlyModule implements SearchService.Document
 
         WikiSchema.register(this);
         WikiController.registerAdminConsoleLinks();
-
-        try
-        {
-            MarkdownService.setInstance(new MarkdownServiceImpl());
-        }
-        catch (Exception e)
-        {
-            _log.error(e);
-        }
     }
 
+    // TODO should this move to CoreModule.populateLookAndFeelWithStartupProps()?
     private void populateHomeProjectWebpartsWithStartupProps()
     {
         String propName = "homeProjectInitWebparts";
@@ -161,43 +144,45 @@ public class WikiModule extends CodeOnlyModule implements SearchService.Document
 
     private void bootstrap(ModuleContext moduleContext)
     {
-        Container supportContainer = ContainerManager.createDefaultSupportContainer();
+        Container supportContainer = ContainerManager.getDefaultSupportContainer();
         Container homeContainer = ContainerManager.getHomeContainer();
         Container sharedContainer = ContainerManager.getSharedContainer();
         String defaultPageName = "default";
 
-        FolderType collaborationType = new CollaborationFolderType(Collections.emptyList());
-        homeContainer.setFolderType(collaborationType, moduleContext.getUpgradeUser());
-        supportContainer.setFolderType(collaborationType, moduleContext.getUpgradeUser());
-        sharedContainer.setFolderType(collaborationType, moduleContext.getUpgradeUser());
-
-        if(moduleContext.isNewInstall())
+        if (moduleContext.isNewInstall())
         {
-            loadWikiContent(homeContainer, moduleContext.getUpgradeUser(), defaultPageName, "Welcome to LabKey Server", "/org/labkey/wiki/welcomeWiki.txt", WikiRendererType.HTML);
-            loadWikiContent(supportContainer, moduleContext.getUpgradeUser(), defaultPageName, "Welcome to LabKey Support", "/org/labkey/wiki/supportWiki.txt", WikiRendererType.HTML);
-            loadWikiContent(sharedContainer, moduleContext.getUpgradeUser(), defaultPageName, "Shared Resources", "/org/labkey/wiki/sharedWiki.txt", WikiRendererType.HTML);
+            loadWikiContent(homeContainer, moduleContext.getUpgradeUser(), defaultPageName, "Welcome to LabKey Server", "/org/labkey/wiki/welcomeWiki.txt");
+            loadWikiContent(supportContainer, moduleContext.getUpgradeUser(), defaultPageName, "Welcome to LabKey Support", "/org/labkey/wiki/supportWiki.txt");
+            loadWikiContent(sharedContainer, moduleContext.getUpgradeUser(), defaultPageName, "Shared Resources", "/org/labkey/wiki/sharedWiki.txt");
         }
 
-        Map<String, String> wikiProps = new HashMap<>();
-        wikiProps.put("webPartContainer", supportContainer.getId());
-        addWebPart(WEB_PART_NAME, supportContainer, HttpView.BODY, 0, wikiProps);
-
-        wikiProps.put("webPartContainer", sharedContainer.getId());
-        addWebPart(WEB_PART_NAME, sharedContainer, HttpView.BODY, 0, wikiProps);
+        addWebPart(supportContainer, defaultPageName);
+        addWebPart(sharedContainer, defaultPageName);
 
         // if any modules have registered webparts to show on the home page, use those
-        // otherwise default to the initial set below
+        // otherwise, just add the default wiki webpart
         if (!Portal.getHomeProjectInitWebparts().isEmpty())
         {
+            // Clear existing webpart(s) first -- Core module added the Projects webpart
+            Portal.saveParts(homeContainer, Collections.emptyList());
             for (WebPartFactory webPartFactory : Portal.getHomeProjectInitWebparts())
                 addWebPart(webPartFactory.getName(), homeContainer, HttpView.BODY);
         }
         else
         {
-            wikiProps.put("webPartContainer", homeContainer.getId());
-            wikiProps.put("name", defaultPageName);
-            addWebPart(WEB_PART_NAME, homeContainer, HttpView.BODY, 0, wikiProps);
-            addWebPart("Projects", homeContainer, HttpView.BODY, 1);
+            // Note: Core module already added the Projects webpart. Now add a wiki webpart with the default content.
+            addWebPart(homeContainer, defaultPageName);
+        }
+    }
+
+    private void addWebPart(@Nullable Container c, String wikiName)
+    {
+        if (c != null)
+        {
+            Map<String, String> wikiProps = new HashMap<>();
+            wikiProps.put("webPartContainer", c.getId());
+            wikiProps.put("name", wikiName);
+            addWebPart(WEB_PART_NAME, c, HttpView.BODY, 0, wikiProps);
         }
     }
 
@@ -219,28 +204,28 @@ public class WikiModule extends CodeOnlyModule implements SearchService.Document
         return list;
     }
 
-    private void loadWikiContent(Container c, User user, String name, String title, String resource, WikiRendererType renderAs)
+    private void loadWikiContent(@Nullable Container c, User user, String name, String title, String resource)
     {
-        Wiki wiki = new Wiki(c, name);
-        WikiVersion wikiversion = new WikiVersion();
-        wikiversion.setTitle(title);
-
-        InputStream is = getClass().getResourceAsStream(resource);
-        String body = PageFlowUtil.getStreamContentsAsString(is);
-        wikiversion.setBody(body);
-
-        if (renderAs == null)
-            renderAs = WikiManager.DEFAULT_WIKI_RENDERER_TYPE;
-
-        wikiversion.setRendererTypeEnum(renderAs);
-
-        try
+        if (c != null)
         {
-            getWikiManager().insertWiki(user, c, wiki, wikiversion, null, false);
-        }
-        catch (IOException e)
-        {
-            _log.error(e);
+            Wiki wiki = new Wiki(c, name);
+            WikiVersion wikiversion = new WikiVersion();
+            wikiversion.setTitle(title);
+
+            InputStream is = getClass().getResourceAsStream(resource);
+            String body = PageFlowUtil.getStreamContentsAsString(is);
+            wikiversion.setBody(body);
+
+            wikiversion.setRendererTypeEnum(WikiRendererType.HTML);
+
+            try
+            {
+                getWikiManager().insertWiki(user, c, wiki, wikiversion, null, false);
+            }
+            catch (IOException e)
+            {
+                _log.error("Failed to insert wiki in " + c.getPath() + " from " + resource, e);
+            }
         }
     }
 
@@ -249,9 +234,9 @@ public class WikiModule extends CodeOnlyModule implements SearchService.Document
     @NotNull
     public Set<Class> getIntegrationTests()
     {
-        return new HashSet<>(Arrays.asList(
-                WikiManager.TestCase.class,
-                RadeoxRenderer.RadeoxRenderTest.class));
+        return Set.of(
+            WikiManager.TestCase.class
+        );
     }
 
 
